fixed navbar issue with it stretching and shrinking, added LINK to photo on Homepage comp

--- a/src/comps/styles/styles.css
+++ b/src/comps/styles/styles.css
@@ -24,8 +24,8 @@ body {
 }
 
 .navbar {
-
-
+    max-width: 125rem;
+    min-width: 5rem;
 background-color: white;
   display: grid;
   grid-template-columns: 3fr 1fr 1fr 1fr;
@@ -108,9 +108,13 @@ a {
 
 .title-background {
     z-index: -3;
+    width: 100%;
+    height: 100%;
     bottom:  0.0001rem;
-    position:absolute;
+    position: absolute;
 }
+
+
 
 .homepage-body {
     display: flex;
